--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "naisu",
   "description": "An AngularJS Company Profile Web",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "homepage": "https://gitlab.com/fauzan-blitz/naisu.git",
   "license": "MIT",
   "private": true,
@@ -12,6 +12,8 @@
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
     "bootstrap": "^3.3.7",
-    "jQuery": "^3.2.1"
+    "jQuery": "^3.2.1",
+    "angular-isotope": "^0.1.14",
+    "angular-images-loaded": "^0.2.6"
   }
 }
