try to host to github pages

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.3.7",
     "jQuery": "^3.2.1",
     "angular-isotope": "^0.1.14",
-    "angular-images-loaded": "^0.2.6"
+    "angular-images-loaded": "^0.2.6",
+    "font-awesome": "^4.7.0"
   }
 }
