implement directive to parallax & isotope, implement imagesloaded to isotope

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "jQuery": "^3.2.1",
     "angular-isotope": "^0.1.14",
     "angular-images-loaded": "^0.2.6",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "please-wait": "Pathgather/please-wait#^0.0.5"
   }
 }
